style & fix: style update, fixes rusted white color on mobile devices

--- a/src/Scss/abstracts/_colors.scss
+++ b/src/Scss/abstracts/_colors.scss
@@ -4,6 +4,7 @@ $red: hsl(360, 100%, 44%);
 
 $sec-color:hsl(0, 0%, 100%);
 $off-white:hsl(49, 44%, 83%);
+$light-white:hsl(43, 58%, 95%);
 
 $black: hsl(0, 0%, 10%);
 $all-black: hsl(0, 0%, 0%);
