--- a/src/Scss/pages/_contact.scss
+++ b/src/Scss/pages/_contact.scss
@@ -6,6 +6,10 @@
   padding: 2rem;
   background-color: ab.$off-white;
 
+  @include util.breakpoint-down(small) {
+    background-color: ab.$light-white;
+  }
+
   @include util.breakpoint-down(midSmall) {
     padding: 1rem;
   }
